schema/testdata/validation_field_optional_of_same_message_type/schema.keel
message Foo {
  bar Foo?
}

model Person {
  functions {
    read getPerson(id) returns (Foo)
  }
}

message UnusedMessage {
  bar UnusedMessage?
}