schema/testdata/errors/field_required_of_same_message_type.keel
message Foo {
    //expect-error:9:12:TypeError:The message 'Foo' cannot have a field of its own type unless it is optional.
    bar Foo
}

model Person {
    actions {
        read getPerson(id) returns (Foo)
    }
}

message UnusedMessage {
    //expect-error:9:22:TypeError:The message 'UnusedMessage' cannot have a field of its own type unless it is optional.
    bar UnusedMessage
}
